--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.3.1",
     "axios": "0.24.0",
+    "immer": "^9.0.12",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.2.1",
+    "uuid": "^8.3.2",
     "zustand": "3.6.9"
   },
   "devDependencies": {
