--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "eslint-plugin-jest"
   ],
   "rules": {
+    "react/no-danger": 0,
     "react/prop-types": 0,
     "react/jsx-tag-spacing": [
       0,
