--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,12 @@
     "browser": true,
     "jest/globals": true
   },
-  "extends": ["eslint:recommended", "eslint-config-prettier", "eslint-config-xo-react"],
+  "extends": [
+    "eslint:recommended",
+    "next/core-web-vitals",
+    "eslint-config-prettier",
+    "eslint-config-xo-react"
+  ],
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module"
