--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "next build",
     "cypress": "npx cypress@9 open",
     "cypress:run": "npx cypress@9 run",
-    "dev": "react-scripts start",
-    "jest": "react-scripts test --watchAll=false",
-    "jest:watch": "react-scripts test --watchAll",
+    "dev": "next dev",
+    "jest": "jest",
+    "jest:watch": "jest --watch",
     "lint": "npm run eslint && npm run stylelint",
     "eslint": "eslint",
     "prepare": "npx husky install",
@@ -28,6 +28,7 @@
     "@mui/material": "^5.3.1",
     "axios": "0.24.0",
     "immer": "^9.0.12",
+    "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
@@ -54,6 +55,7 @@
     "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo-react": "^0.26.0",
     "eslint-plugin-jest": "^25.2.2",
@@ -63,7 +65,6 @@
     "jest": "^27.3.1",
     "postcss-syntax": "^0.36.2",
     "prettier": "^2.5.1",
-    "react-scripts": "^5.0.0",
     "stylelint": "^13.13.1",
     "stylelint-a11y": "^1.2.3",
     "stylelint-config-prettier": "^8.0.2",
