--- a/package.json
+++ b/package.json
@@ -24,16 +24,15 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.3.1",
+    "@mui/icons-material": "^5.4.2",
     "@mui/material": "^5.3.1",
     "axios": "0.24.0",
     "immer": "^9.0.12",
+    "lodash.uniqby": "^4.7.0",
     "next": "^12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^1.2.2",
-    "react-router-dom": "^6.2.1",
+    "use-debounce": "^7.0.1",
     "uuid": "^8.3.2",
     "zustand": "3.6.9"
   },
