--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint": "eslint",
     "prepare": "npx husky install",
     "stylelint": "npx stylelint src/{**/*,*}.{css,js,jsx}",
-    "start": "npx serve@13 build -l 3000",
+    "start": "next start",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook",
     "test:e2e": "npx start-server-and-test@1 start http://localhost:3000 cypress:run",
@@ -29,7 +29,9 @@
     "axios": "0.24.0",
     "immer": "^9.0.12",
     "lodash.uniqby": "^4.7.0",
+    "lru-cache": "^7.4.0",
     "next": "^12.0.10",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "use-debounce": "^7.0.1",
